# bitget

./: .gitignore  README.md  requirements.txt
bitget/: pyproject.toml
bitget/src/bitget/: __init__.py  __init__.pyi  _bitget.py
bitget/src/bitget/common/: __init__.py  __init__.pyi  _common.py
bitget/src/bitget/common/assets/: __init__.py  _assets.py  assets_overview.py  bot.py  bot_assets.py  funding.py  funding_assets.py  overview.py
bitget/src/bitget/common/tax/: __init__.py  _tax.py  futures_transaction_records.py  margin_transaction_records.py  p2p_transaction_records.py  spot_transaction_records.py
bitget/src/bitget/copy/: __init__.py
bitget/src/bitget/copy/futures/: __init__.py
bitget/src/bitget/copy/spot/: __init__.py
bitget/src/bitget/core/: __init__.pyi  mixin.py  rate_limiting.py  types.py  util.py  validation.py
bitget/src/bitget/core/http/: auth.py  client.py
bitget/src/bitget/earn/: __init__.py  __init__.pyi  _earn.py
bitget/src/bitget/earn/account/: _account.py  account_assets.py  assets.py
bitget/src/bitget/earn/savings/: __init__.py  products.py
bitget/src/bitget/futures/: __init__.py  __init__.pyi  _futures.py  core.py
bitget/src/bitget/futures/account/: __init__.py  _account.py  account_list.py  bills.py  single_account.py  subaccount_assets.py
bitget/src/bitget/futures/market/: __init__.py  merge_depth.py  symbols.py  ticker.py  tickers.py
bitget/src/bitget/margin/: __init__.pyi  _margin.py
bitget/src/bitget/sdk/: core.py
bitget/src/bitget/spot/: __init__.py  __init__.pyi  _spot.py
docs/: README.md  api-overview.md  (+4 more)
(+89 files in other folders)
