[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitget-trading-sdk"
version = "0.1.2"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "The unofficial Bitget API SDK, by Tribulnation. Compatible with Trading SDK."
dependencies = [
  "lazy-loader", "httpx", "pydantic", "websockets", "orjson",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/tribulnation/bitget.git"
